--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Creativity</h2>
-									<p>The part is of CAS that deals with being creative. Visual designing, exploration, and blank are all parts of creativity</p>
+									<p>The part of CAS that deals with being creative. Visual arts, exploration, and raising fundraisers are all parts of creativity. It is the part where the student uses creative thinking to help create a better society.</p>
 								</div>
 							</div>
 						</section>
@@ -58,7 +58,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Action</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>The part of CAS, which includes taking action to create a better society</p>
 								</div>
 							</div>
 						</section>
