--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Creating a Better Society</h1> 
-							<p>This is the CAS project of Hamzah Kurdi</p>
+							<p>Welcome to the CAS Project of Hamzah Kurdi. In this website, you can see my reflections and my final CAS project.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
