--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Activity</h2>
-									<p>The part of CAS, which includes taking action to create a better society. The activity must include physical movement for a healthier lifestyle. An example would be </p>
+									<p>The part of CAS, which includes taking action to create a better society. The activity must include physical movement for a healthier lifestyle. An example would be going to the gym for the first time in a while. </p>
 								</div>
 							</div>
 						</section>
@@ -88,7 +88,8 @@
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Ttitle</h3>
+									<h3>Service</h3>
+									<p>Thursday, September 27, 2018</p>
 									<p>TEXT</p>
 								</section>
 								<section>
