--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Creating a Better Society</h1> 
-							<p>Welcome to the CAS Project of Hamzah Kurdi. In this website, you can see my reflections and my final CAS project.</p>
+							<p>Welcome to the CAS Project of Hamzah Kurdi. On this website, you will be able to discover my adventures through a 18 month period through my reflections and my final CAS project.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -67,8 +67,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Service</h2>
-									<p>TEXT</p>
-								</div>
+									<p>The part of CAS that involves voluntary work for the community. In order for it to be count, the service must be voluntary and beneficial for the student. A great example would be picking up litter from public parks in your community</p>
+								</div> 
 							</div>
 						</section>
 					</section>
@@ -90,7 +90,8 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Service</h3>
 									<p>Thursday, September 27, 2018</p>
-									<p>TEXT</p>
+									<p>Description</p>
+									<p>IB Learner Profiles</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
