--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Service</h2>
-									<p>The part of CAS that involves voluntary work for the community. In order for it to be count, the service must be voluntary and beneficial for the student. A great example would be picking up litter from public parks in your community</p>
+									<p>The part of CAS that involves voluntary work for the community. In order for it to be count, the service must be voluntary and beneficial for the student. A great example would be picking up litter from public parks in your community.</p>
 								</div> 
 							</div>
 						</section>
@@ -90,7 +90,7 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Service</h3>
 									<p>Thursday, September 27, 2018</p>
-									<p>Description</p>
+									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, i tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
 									<p>IB Learner Profiles</p>
 								</section>
 								<section>
