--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<h3>Service</h3>
 									<p>Thursday, September 27, 2018</p>
 									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, i tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
-									<p>IB Learner Profiles</p>
+									<p>After my interactions with the children, i realized the blessing i was in as i began to reflect on the experience. I felt somewhat guilty because they did nothing to wrong to get diseased and i did nothing to deserve to not get diseased. Another learner profile i used was caring. Whenever i interacted with them, i tried to show how much i care about them. A specific incident i remember would be when i saw one of the students who appeared to be lost, so i helped him find his friends.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
