--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
+									<h3>Alliance Francaise</h3>
 									<h3>Creativity</h3>
 									<p><u>Tuesday, September 11, 2018</u></p>
 									<p>Over the summer, i registered in a French course at Alliance Francaise in the Diplomatic Quarter. I would go there to acquire knowledge in the French language and meet other peeople who have different goals than me. One of the reasons i wanted to learn a new language is because i believe in Sapir-Whorf Hypothesis. The hypothesis states that different languages create different ways of thinking. However, there were other reasons why i wanted to learn French. </p>
@@ -88,6 +89,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
+									<h3>Saudi National Day</h3>
 									<h3>Service</h3>
 									<p>Thursday, September 27, 2018</p>
 									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, i tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
@@ -95,8 +97,11 @@
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Title</h3>
-									<p>TEXT</p>
+									<h3>Driving Lessons</h3>
+									<h3>Creativity</h3>
+									<p>Saturday, October 28, 2018</p>
+									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then i would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
+									<p>This isn't the first time i will perform this activity, which will allow to demonstrate and develop in many IB learner profiles.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
