--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Alliance Francaise</h3>
+									<h3>Alliance Francaise:</h3>
 									<h3>Creativity</h3>
 									<p><u>Tuesday, September 11, 2018</u></p>
-									<p>Over the summer, i registered in a French course at Alliance Francaise in the Diplomatic Quarter. I would go there to acquire knowledge in the French language and meet other peeople who have different goals than me. One of the reasons i wanted to learn a new language is because i believe in Sapir-Whorf Hypothesis. The hypothesis states that different languages create different ways of thinking. However, there were other reasons why i wanted to learn French. </p>
-									<p>From this experience, i gained many IB learner profiles. The most notable one was communicator, for the reason that i gained relationships with my classmates and learned the language by communicating in class. After the 7 week course, i felt my perspective of the world changed, which indicates that Sapir-Whorf hypothesis is correct. Aside from the language itself, i learned about the French culture and how they live their daily lives.</p>
+									<p>Over the summer, I registered in a French course at Alliance Francaise in the Diplomatic Quarter. I would go there to acquire knowledge in the French language and meet other peeople who have different goals than me. One of the reasons I wanted to learn a new language is because I believe in Sapir-Whorf Hypothesis. The hypothesis states that different languages create different ways of thinking. However, there were other reasons why I wanted to learn French. </p>
+									<p>From this experience, I gained many IB learner profiles. The most notable one was communicator, for the reason that I gained relationships with my classmates and learned the language by communicating in class. After the 7 week course, I felt my perspective of the world changed, which indicates that Sapir-Whorf hypothesis is correct. Aside from the language itself, I learned about the French culture and how they live their daily lives.</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Saudi National Day</h3>
+									<h3>Saudi National Day:</h3>
 									<h3>Service</h3>
 									<p>Thursday, September 27, 2018</p>
-									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, i tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
-									<p>After my interactions with the children, i realized the blessing i was in as i began to reflect on the experience. I felt somewhat guilty because they did nothing to wrong to get diseased and i did nothing to deserve to not get diseased. Another learner profile i used was caring. Whenever i interacted with them, i tried to show how much i care about them. A specific incident i remember would be when i saw one of the students who appeared to be lost, so i helped him find his friends.</p>
+									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, I tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
+									<p>After my interactions with the children, I realized the blessing I was in as I began to reflect on the experience. I felt somewhat guilty because they did nothing to wrong to get diseased and I did nothing to deserve to not get diseased. Another learner profile I used was caring. Whenever I interacted with them, I tried to show how much I care about them. A specific incident I remember would be when I saw one of the students who appeared to be lost, so I helped him find his friends.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Driving Lessons</h3>
+									<h3>Driving Lessons:</h3>
 									<h3>Creativity</h3>
 									<p>Saturday, October 28, 2018</p>
-									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then i would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
-									<p>This isn't the first time i will perform this activity, which will allow to demonstrate and develop in many IB learner profiles.</p>
+									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then I would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
+									<p>This isn't the first time nor last time I perform this activity, which allowed to demonstrate and develop in many IB learner profiles. However, I believe I displayed </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
