--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									<h3>Creativity</h3>
 									<p>Saturday, October 28, 2018</p>
 									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then I would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
-									<p>This isn't the first time nor last time I perform this activity, which allowed to demonstrate and develop in many IB learner profiles. However, I believe I displayed </p>
+									<p>This isn't the first time nor last time I perform this activity, which allowed to demonstrate and develop in many IB learner profiles. However, I believe I displayed other important skills. First of all, I dislplayed my patience while drving; not only in the act itself, but in understanding that learning how to drive is going to take time. I believe the IB learner profile I demonstarted the most was priincipled, which correlates to being patient. I showed my ability to control a car while being displined and understanding the danger of this activity.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
