--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<span class="icon major fa-lock"></span>
 									<h3>Saudi National Day:</h3>
 									<h3>Service</h3>
-									<p>Thursday, September 27, 2018</p>
+									<p><u>Thursday, September 27, 2018</u></p>
 									<p>Today, we celebrated the 88th Saudi National day in school. As part of the celebration, our superintendent invited students from another school that were suffering from down-syndrome. I volunteered to aid in greeting, welcoming, and making sure the down-syndrome students did what they were supposed to do. When they arrived, I tried to greet them with a big smile and kind words. Then, we helped them sit down in their authorized seats. </p>
 									<p>After my interactions with the children, I realized the blessing I was in as I began to reflect on the experience. I felt somewhat guilty because they did nothing to wrong to get diseased and I did nothing to deserve to not get diseased. Another learner profile I used was caring. Whenever I interacted with them, I tried to show how much I care about them. A specific incident I remember would be when I saw one of the students who appeared to be lost, so I helped him find his friends.</p>
 								</section>
@@ -99,7 +99,7 @@
 									<span class="icon major fa-cog"></span>
 									<h3>Driving Lessons:</h3>
 									<h3>Creativity</h3>
-									<p>Saturday, October 28, 2018</p>
+									<p><u>Saturday, October 28, 2018</u></p>
 									<p>Yesterday, my older brother took me out to teach me how to drive. After lunch, he took me to an area where we can train easily and we started training. We picked an empty parking to cones because it is ideal for driving training. He would show me things to do, then I would try to replicate it. We worked on turning, parking, and awareness of your surroundings. Also, we worked on getting used to the car and its dimensions and how to deal with certain situations.</p>
 									<p>This isn't the first time nor last time I perform this activity, which allowed to demonstrate and develop in many IB learner profiles. However, I believe I displayed other important skills. First of all, I dislplayed my patience while drving; not only in the act itself, but in understanding that learning how to drive is going to take time. I believe the IB learner profile I demonstarted the most was priincipled, which correlates to being patient. I showed my ability to control a car while being displined and understanding the danger of this activity.</p>
 								</section>
