--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Activity</h2>
+									<h2>Action</h2>
 									<p>The part of CAS, which includes taking action to create a better society. The activity must include physical movement for a healthier lifestyle. An example would be going to the gym for the first time in a while. </p>
 								</div>
 							</div>
@@ -109,7 +109,7 @@
 									<h3>Creativity</h3>
 									<p><u>Monday, November 12, 2018</u></p>
 									<p>This week in school, our language and literature A teacher decided to take our lesson for the day to a nearby park. Me along with the teacher and the other students headed out to the park in the beginning of class taking only our books, which we are reading in class and is called "1984 by George Orwell". On our way to the park, my classmate Nawaf gave us a fast summary about the events that happened in Chapter 5. Then, when we arrived at the park we all split up and read Chapter 6 in the peace of the park.</p>
-									<p></p>
+									<p>After returning back to school, I decided to write a CAS reflection on this experience. I believe that some this experience I gained values that weren't present in me before. For example, I never realized how satisfying it is to interact with nature and how peaceful it is to read a book while hearing the chirping of the birds. I displayed a very important IB learner profile, which was being openminded about the creation of nature. In my opinion, we, as a commnuity, should contemplate the beautiful nature around us.</p>
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
