--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>A Walk in the Park</h3>
+									<h3>A Walk in the Park:</h3>
 									<h3>Creativity</h3>
 									<p><u>Monday, November 12, 2018</u></p>
 									<p>This week in school, our language and literature A teacher decided to take our lesson for the day to a nearby park. Me along with the teacher and the other students headed out to the park in the beginning of class taking only our books, which we are reading in class and is called "1984 by George Orwell". On our way to the park, my classmate Nawaf gave us a fast summary about the events that happened in Chapter 5. Then, when we arrived at the park we all split up and read Chapter 6 in the peace of the park.</p>
