--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
-									<h3>Title</h3>
+									<h3>Trip to Al-Baha</h3>
+									<h3>Creativity</h3>
+									<p><u>Sunday, November 18, 2018</u><p>
+									<p></p>
 									<p>TEXT</p>
 								</section>
 								<section>
