--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 									<h3>Creativity</h3>
 									<p><u>Sunday, November 18, 2018</u><p>
 									<p>Last weekend, my older brothers and I traveled to Al-Baha to attend our friend's wedding. We arrived Friday afternoon and as soon as we landed at the airport, we realized the beauty of nature in Al-Baha. As we drove to the hotel, I continued to admire the beauty of the Hejaz Mountains as well as take a couple of pictures here and there. In the evening, we drove to the wedding. As soon as we arrived, we understood the difference of traditions in Al-Baha and other regions in the Kingdom. The next day we visited toursit attractions such as Dhey Al Ain Village and Al Raghdan Forest Park.</p>
-									<img src="IMG_0682" alt="Dhey Al Ain Village">
-									<img src="IMG_0689" alt="Hejaz Mountains">
+									<img src="IMG_0682.heif" alt="Dhey Al Ain Village">
+									<img src="IMG_0689.heif" alt="Hejaz Mountains">
 									<p>TEXT</p>
 								</section>
 								<section>
