--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									<p>Last weekend, my older brothers and I traveled to Al-Baha to attend our friend's wedding. We arrived Friday afternoon and as soon as we landed at the airport, we realized the beauty of nature in Al-Baha. As we drove to the hotel, I continued to admire the beauty of the Hejaz Mountains as well as take a couple of pictures here and there. In the evening, we drove to the wedding. As soon as we arrived, we understood the difference of traditions in Al-Baha and other regions in the Kingdom. The next day we visited toursit attractions such as Dhey Al Ain Village and Al Raghdan Forest Park.</p>
 									<img src="/desktop/IMG_0682" alt="Dhey Al Ain Village">
 									<img src="/desktop/IMG_0689" alt="Hejaz Mountains">
-									<p>TEXT</p>
+									<p>While reflecting on the trip, i realized that this experience changed me as a person. First of all, I displayed and developed many of my IB learner profiles. I was openminded during the wedding towards the traditions of the people of Al-Baha. Also, I was reflective about how God was able to create such beautiful mountains and how nature works; from the trees to the mountains to the bees. Finally, I was principled because I visited public property that cannot be fixed if it were to be damaged.</p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
