--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/Basketball.jpeg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Action</h2>
@@ -124,6 +124,14 @@
 									<h3>Durrat Al Aroos</h3>
 									<h3>Creativity<h3>
 									<p><u>Thursday, December 27, 2018</u></p>
+									<p>TEXT</p>
+									<p>TEXT</p>
+								</section>
+								<section>
+									<span class="icon major fa-diamond"></span>
+									<h3>Biking</h3>
+									<h3>Creativity<h3>
+									<p><u>Friday, December 28, 2018</u></p>
 									<p>TEXT</p>
 									<p>TEXT</p>
 								</section>
