--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Biking</h3>
-									<h3>Creativity<h3>
+									<h3>Action<h3>
 									<p><u>Friday, December 28, 2018</u></p>
-									<p>TEXT</p>
+									<p>While in our beach hut in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
 									<p>TEXT</p>
 								</section>
 								<section>
