--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Durrat Al Aroos</h3>
-									<h3>Creativity<h3>
+									<h3>Creativity</h3>
 									<p><u>Thursday, December 27, 2018</u></p>
 									<p>During the winter vacation, my family and I travelled to Jeddah to visit family. During our visit my grandparents rented a beach hut outside the city for us to spend the weekend in. The hut had its own private beach and we spent the whole day on the shores of the Red Sea. I swam with my cousins and went jetskiing. Also, we drove golf cars around the compound and enjoyed the beauty of the sea and the weather.</p>
 									<p>TEXT</p>
@@ -130,7 +130,7 @@
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Biking</h3>
-									<h3>Action<h3>
+									<h3>Action</h3>
 									<p><u>Friday, December 28, 2018</u></p>
 									<p>While in our beach hut in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
 									<p>TEXT</p>
@@ -138,7 +138,7 @@
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Hiking in the Diplomatic Quarter</h3>
-									<h3>Action<h3>
+									<h3>Action</h3>
 									<p><u>Wednesday, January 30, 2019</u></p>
 									<p>TEXT</p>
 									<p>TEXT</p>
@@ -146,7 +146,7 @@
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Basketball</h3>
-									<h3>Action<h3>
+									<h3>Action</h3>
 									<p><u>Monday, February 4, 2019</u></p>
 									<p>TEXT</p>
 									<p>TEXT</p>
