--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									<h3>Hiking in the Diplomatic Quarter</h3>
 									<h3>Action</h3>
 									<p><u>Wednesday, January 30, 2019</u></p>
-									<p>TEXT</p>
+									<p>My classmate and I acted as student leaders during a Grade 9 field trip to the Diplomatic Quarter. The field trip was a hike around the diplomatic quarter's beautiful parks and roundabouts. However, we faced some problems during trip. An officer of the Diplomatic Security Forces stopped us to interrogate. He asked us if we had permission to be in the diplomatic quarters and due to some confusion, our permission form was lost. Since, both the teachers with us didn't speak Arabic, I was the person communicating to with the officer. After 15 minutes of interrogation, we continued our path to iHop, where we had breakfast and then headed back to school.</p>
 									<p>TEXT</p>
 								</section>
 								<section>
