--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Durrat Al Aroos</h3>
+									<h3>Durrat Al Aros</h3>
 									<h3>Creativity</h3>
 									<p><u>Thursday, December 27, 2018</u></p>
 									<p>During the winter vacation, my family and I travelled to Jeddah to visit family. During our visit my grandparents rented a beach hut outside the city for us to spend the weekend in. The hut had its own private beach and we spent the whole day on the shores of the Red Sea. I swam with my cousins and went jetskiing. Also, we drove golf cars around the compound and enjoyed the beauty of the sea and the weather.</p>
