--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
 									<p>TEXT</p>
 									<p>TEXT</p>
 								</section>
+								<section>
+									<span class="icon major fa-diamond"></span>
+									<h3>Personal Project Volunteering</h3>
+									<h3>Service</h3>
+									<p><u>Wednesday, February 6, 2019</u></p>
+									<p>TEXT</p>
+									<p>TEXT</p>
+								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
