--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
 									<h3>Durrat Al Aros</h3>
 									<h3>Creativity</h3>
 									<p><u>Thursday, December 27, 2018</u></p>
-									<p>During the winter vacation, my family and I travelled to Jeddah to visit family. During our visit my grandparents rented a beach hut outside the city for us to spend the weekend in. The hut had its own private beach and we spent the whole day on the shores of the Red Sea. I swam with my cousins and went jetskiing. Also, we drove golf cars around the compound and enjoyed the beauty of the sea and the weather.</p>
-									<p>TEXT</p>
+									<p>During the winter vacation, my family and I travelled to Jeddah to visit family. During our visit my grandparents rented a beach house outside the city for us to spend the weekend in. The house had its own private beach and we spent the whole day on the shores of the Red Sea. I swam with my cousins and went jetskiing. Also, we drove golf cars around the compound and enjoyed the beauty of the sea and the weather.</p>
+									<p>During the trip, I displayed many essential characteristics including leadership and responsibility. Throughout our stay, I was responsible for taking care of my younger cousins and siblings on many occasions. This helped me develop my principled IB learner profile by taking responsibility for my own actions and evaluating others actions for their own sake. Another way I was principled was the responsibility I carried while driving the golf car around the compound on the same road with other cars.</p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Biking</h3>
 									<h3>Action</h3>
 									<p><u>Friday, December 28, 2018</u></p>
-									<p>While in our beach hut in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
-									<p>TEXT</p>
+									<p>While in our beach house in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
+									<p></p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
