--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
 									<p>During the trip, I displayed many essential characteristics including leadership and responsibility. Throughout our stay, I was responsible for taking care of my younger cousins and siblings on many occasions. This helped me develop my principled IB learner profile by taking responsibility for my own actions and evaluating others actions for their own sake. Another way I was principled was the responsibility I carried while driving the golf car around the compound on the same road with other cars.</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
+									<span class="icon major fa-code"></span>
 									<h3>Biking</h3>
 									<h3>Action</h3>
 									<p><u>Friday, December 28, 2018</u></p>
 									<p>While in our beach house in Jeddah, we rented bikes. My cousins and I rented bikes and started racing around the compounds. The bike paths were filled with people walking so we had to be very careful that we don't hurt anyone. The night after the biking I couldn't sleep because my hamstring and knee muscles were hurting a lot. It was hurting without me even moving my legs, which ruined the experience afterwards.</p>
-									<p></p>
+									<p>Throughout this experience, I was a risk-taker because I would bike at high speeds through crowds of people racing with my cousins, however I was cautious of the people around me and slowed down when I needed to. After the experience, I reflected on the experience through the pains that I suffered in my knee muscles and I agreed with myself that I will try to practice sports, which is why I signed up for the basketball program in the school.</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
+									<span class="icon major fa-lock"></span>
 									<h3>Hiking in the Diplomatic Quarter</h3>
 									<h3>Action</h3>
 									<p><u>Wednesday, January 30, 2019</u></p>
@@ -144,7 +144,7 @@
 									<p>TEXT</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
+									<span class="icon major fa-cog"></span>
 									<h3>Basketball</h3>
 									<h3>Action</h3>
 									<p><u>Monday, February 4, 2019</u></p>
@@ -152,8 +152,8 @@
 									<p>TEXT</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Personal Project Volunteering</h3>
+									<span class="icon major fa-desktop"></span>
+									<h3>Personal Proect Volunteering</h3>
 									<h3>Service</h3>
 									<p><u>Wednesday, February 6, 2019</u></p>
 									<p>TEXT</p>
