--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									<h3>Action</h3>
 									<p><u>Wednesday, January 30, 2019</u></p>
 									<p>My classmate and I acted as student leaders during a Grade 9 field trip to the Diplomatic Quarter. The field trip was a hike around the diplomatic quarter's beautiful parks and roundabouts. However, we faced some problems during trip. An officer of the Diplomatic Security Forces stopped us to interrogate. He asked us if we had permission to be in the diplomatic quarters and due to some confusion, our permission form was lost. Since, both the teachers with us didn't speak Arabic, I was the person communicating to with the officer. After 15 minutes of interrogation, we continued our path to iHop, where we had breakfast and then headed back to school.</p>
-									<p>TEXT</p>
+									<p>Throughout the field trip, I displayed my leadership in a variety of ways. First of all, I was leading the group through the hike with my classmate. Since both our instructors hadn't been on the trip before, we were given the opportunity to lead the group throughout our journey. I also displayed my leadership qualities when we were being interrogated by the Diplomatic Security Forces officer. I acted as a translater between the teachers incharge and the officer while explaining to the officer the purpose of the trip and our final destination.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
