--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 									<h3>Basketball</h3>
 									<h3>Action</h3>
 									<p><u>Monday, February 4, 2019</u></p>
-									<p>TEXT</p>
-									<p>TEXT</p>
+									<p>After reflecting on my previous activities, I realized that I need to participate in more physical activities. So I decided to sign up for basketball tryouts in school and participate in more physcial activities. Today, was my first day and I realized that my fitness levels are below average because I was tired from the first ten minutes of practice. Compared to my fellow teammates who lasted the whole 30 minutes of practice. Afterwards, I decided to start to practice basketball outside training hours so I can improve my fitness while as well developing my of my hobbies.</p>
+									<p>Throughout the experience, I displayed my reflective skills. First of all, I reflected on my biking experience by deciding to participate in more physical activities during my weekly routines. Also, after participating in my first basketball training I decided to practice sports more to improve my fitness levels. Finally, I made through friends throughout this experience with students in lower grades and with our trainer, Mr. Tat Picott. Overall, it was a fun experience that began from a random experience with my family and by reflecting on the experience I was able to began practicing my hobby more for my own benefit.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
